--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 </div>
             </div>
         </div>
-        <script src="bundle.js"></script>   
+        <script src="form.js"></script>   
         <script src="main.js"></script>   
 
     </body>
