--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                                         <input type="checkbox" name="green" value="Green">
                                         <label for="green">Green</label>
                                         <input type="checkbox" name="red" value="Red">
-                                        <label for="red">red</label>
+                                        <label for="red">Red</label>
                                     </div>
                                     
                                     <div class="m-15">
