--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                                 <form id="user-form">
                                     <input type="text" id="username" maxlength="50" name="username" placeholder="Enter Your Name" class="m-15 block-display" required>
                                     <input type="email" id="email" name="email" placeholder="Enter Your Email" class="m-15 block-display" required>
-                                    <input type="date" id="dob" name="dob" class="m-15 block-display" required>
+                                    <input type="date" id="dob" name="dob" class="m-15 block-display" placeholder="Enter Date of Birth" required>
                                     <input type="text" id="age" name="age" placeholder="Enter age" class="m-15 block-display"></input>
                                     <select id="country" class="m-15 block-display" required>
                                         <option value="">Select Country</option>
